--- a/thankyou.html
+++ b/thankyou.html
@@ -207,8 +207,10 @@
             const renderIntro = () => {
                 quizModalContent.innerHTML = `
                     <div class="flex justify-between items-start">
-                        <h3 class="text-2xl font-bold text-slate-800 text-left">Just One More Thing...</h3>
-                        <button id="close-quiz" class="text-slate-400 hover:text-slate-800 text-3xl leading-none">&times;</button>
+                        <div class="w-full text-center">
+                           <h3 class="text-2xl font-bold text-slate-800">Congrats!</h3>
+                        </div>
+                        <button id="close-quiz" class="text-slate-400 hover:text-slate-800 text-3xl leading-none -mt-2 -mr-2">&times;</button>
                     </div>
                     <div class="text-left mt-4">
                         <p class="text-slate-600">You've made it to the final step. This is a quick, fun quiz to see how well you've gotten to know me through this site. It should only take a minute, and there might be a small thank you for your team at the end!</p>
