--- a/thankyou.html
+++ b/thankyou.html
@@ -109,7 +109,7 @@
         <section id="intro" class="container mx-auto px-6 text-center">
             <div class="max-w-3xl mx-auto">
                 <h1 class="text-4xl md:text-5xl font-extrabold tracking-tight text-slate-900">Thank You & Next Steps</h1>
-                <p class="mt-4 text-lg text-slate-600">I appreciate you taking the time to review my interactive application. I am confident in my ability to deliver exceptional results for your team and am eager to discuss this opportunity further.</p>
+                <p class="mt-4 text-lg text-slate-600">I appreciate you taking the time to review my interactive application. I am confident in my ability to deliver exceptional results for your team and am excited to discuss this opportunity further.</p>
             </div>
         </section>
         
