--- a/resume.html
+++ b/resume.html
@@ -231,7 +231,7 @@
                                 <div class="p-2 bg-white rounded-xl shadow-lg">${mediaHTML}</div>
                             </div>
                         </div>
-                        <div class="absolute left-4 md:left-1/2 top-1/2 -translate-y-1/2 -ml-2 h-4 w-4 rounded-full bg-sky-500 ring-8 ring-white"></div>
+                        <div class="absolute left-4 top-8 md:left-1/2 md:top-1/2 md:-translate-y-1/2 -ml-2 h-4 w-4 rounded-full bg-sky-500 ring-8 ring-white"></div>
                     </div>
                 `;
                 timelineContainer.innerHTML += timelineItem;
