--- a/fit.html
+++ b/fit.html
@@ -81,45 +81,52 @@
             <div class="max-w-3xl mx-auto">
                 <h1 class="text-4xl md:text-5xl font-extrabold tracking-tight text-slate-900">Alignment & Cultural Fit</h1>
                 <p class="mt-4 text-lg text-slate-600">
-                   A great team member has more than just the right skills; they share the same core values. I resonate deeply with Acquisition.com's ethos of competitive greatness, sincere candor, and unimpeachable character.
+                   I know how important the core values are to everyone at ACQ and for what you're building. I'm glad to say that I resonate deeply with Acquisition.com's ethos of competitive greatness, sincere candor, and unimpeachable character, as you'll read below.
                 </p>
             </div>
         </section>
         
         <!-- Core Values Section -->
         <section id="core-values" class="container mx-auto px-6 pt-24 pb-16">
-            <div class="max-w-5xl mx-auto">
+            <div class="max-w-4xl mx-auto">
                 <div class="text-center mb-16">
                      <h2 class="text-3xl md:text-4xl font-bold text-slate-900">Embodying the Core Values</h2>
                      <p class="mt-4 max-w-2xl mx-auto text-slate-600">Here is how my experiences and mindset align with your values.</p>
                 </div>
 
-                <div class="grid md:grid-cols-1 lg:grid-cols-3 gap-8">
+                <div class="grid grid-cols-1 gap-8">
                     <!-- Value Card 1 -->
-                    <div class="bg-white p-8 rounded-xl shadow-lg border border-slate-200 text-left">
+                    <div class="bg-white p-8 rounded-xl shadow-lg border border-slate-200 text-left flex flex-col">
                         <h3 class="text-2xl font-bold text-slate-800">Competitive Greatness</h3>
-                        <p class="text-slate-600 mt-4">X</p>
-                        <div class="mt-6 pt-6 border-t border-slate-200">
-                            <h4 class="font-semibold text-slate-500 text-sm uppercase tracking-wider">Supporting Example</h4>
-                            <p class="text-slate-600 mt-2">Placeholder</p>
+                        <div class="text-slate-600 mt-4 leading-relaxed flex-grow">
+                            <p class="italic text-slate-500">TL;DR: From martial arts championships to turning a 'C' into a TA position, I thrive on hard challenges and have a deep-seated need to be great.</p><br>
+                            <p>I’ve always been driven by the enjoyment of a hard challenge and the desire to be at my best when my best is needed.</p><br>
+                            <p>This started early for me. In martial arts, I dedicated myself from age five to become a champion at local, state, national, and international levels. Later, when I took up basketball as a total beginner, I embraced the challenge by being the first one in and the last one out of the gym, channeling my energy into becoming the best player I could be. From being a bench warmer my freshman year to playing in the starting five in my junior year, I made huge strides in my game simply because I had an absolute need to be great.</p><br>
+                            <p>This drive extends directly to my academics, too. I graduated from USC a full year early with a 3.9 GPA. A great example of my academic competitiveness was in computer science: my Intro to Java course was really hard for me and was the first time I'd ever gotten a C on an exam. But, instead of giving up, I saw this as a challenge to conquer. I doubled down on my efforts, and just one semester later, I became a TA for that very same course.</p><br>
+                            <p>Even this application is an example of my competitive greatness. I chose to build this multi-part website, encoded in the QR code and mailed in the over-the-top briefcase to give it my all and create the best application I could possibly think of. To create the best job application you’ve ever received at ACQ. I wanted to do everything I could to stand out and show you my commitment and drive firsthand - to demonstrate my competitive greatness.</p>
                         </div>
                     </div>
                     <!-- Value Card 2 -->
-                    <div class="bg-white p-8 rounded-xl shadow-lg border border-slate-200 text-left">
+                    <div class="bg-white p-8 rounded-xl shadow-lg border border-slate-200 text-left flex flex-col">
                          <h3 class="text-2xl font-bold text-slate-800">Sincere Candor</h3>
-                        <p class="text-slate-600 mt-4">X</p>
-                        <div class="mt-6 pt-6 border-t border-slate-200">
-                            <h4 class="font-semibold text-slate-500 text-sm uppercase tracking-wider">Supporting Example</h4>
-                            <p class="text-slate-600 mt-2">Placeholder</p>
+                        <div class="text-slate-600 mt-4 leading-relaxed flex-grow">
+                            <p class="italic text-slate-500">TL;DR: I actively seek and give direct, honest feedback—a practice honed from martial arts training and leadership roles—because I know it's the fastest path to growth.</p><br>
+                            <p>I was taught to always communicate what needs to be communicated, regardless of how difficult it may seem. This value has been a core part of my development.</p><br>
+                            <p>A formative experience was my time in martial arts. As a competitor, after every single one of my tournaments, I would ask each of my and opposing schools’ senseis (teachers) for direct feedback on how I could improve. Hearing their critiques was difficult in the moment, but I learned to listen to those hard truths. This practice significantly accelerated my learning curve and was a key factor in winning numerous championships.</p><br>
+                            <p>I also learned how to give candid feedback at a young age. I was advanced enough that my martial arts instructor would often ask me to help teach the adult classes (even as an eight year old kid). The adults took longer to learn the techniques, so I had to find ways to express the hard truth that they weren't getting it and show them how to improve, all while keeping them motivated and respected.</p><br>
+                            <p>This skill has been invaluable in the many leadership positions I’ve held, where I've had to have difficult conversations to encourage my teams and keep us on track. One time I had an underperforming executive board member in college - I really wanted to ‘fire’ him but I knew that would only hinder his development. So, as the president, I had to find a way to be upfront with him about his shortcomings but also communicate effectively to ensure his job was done well.</p><br>
+                            <p>As I’ve grown, I’ve learned that one of the best developmental advantages is to seek out constructive feedback to become better, quicker. And, of course, I’ll bring this sincere candor to ACQ when I (hopefully!) join you soon.</p>
                         </div>
                     </div>
                     <!-- Value Card 3 -->
-                    <div class="bg-white p-8 rounded-xl shadow-lg border border-slate-200 text-left">
+                    <div class="bg-white p-8 rounded-xl shadow-lg border border-slate-200 text-left flex flex-col">
                         <h3 class="text-2xl font-bold text-slate-800">Unimpeachable Character</h3>
-                        <p class="text-slate-600 mt-4">X</p>
-                        <div class="mt-6 pt-6 border-t border-slate-200">
-                            <h4 class="font-semibold text-slate-500 text-sm uppercase tracking-wider">Supporting Example</h4>
-                            <p class="text-slate-600 mt-2">Placeholder</p>
+                        <div class="text-slate-600 mt-4 leading-relaxed flex-grow">
+                            <p class="italic text-slate-500">TL;DR: I'm guided by a strong moral compass, always keeping my word and doing what's right, even when it's difficult. My actions are driven by integrity.</p><br>
+                            <p>I'm thoroughly motivated by doing what I judge to be the right thing, even when doing so is hard. I do what I say I’m going to do and I keep my word. This principle has guided me for as long as I can remember.</p><br>
+                            <p>When I was 10, my parents trusted me to write client emails for deals worth over six figures because they knew they could rely on my judgment and integrity. People know they can rely on me and that I always strive to do the right thing, which is why I believe they gravitate toward working with me.</p><br>
+                            <p>One example of this is my decision to go to law school. That choice was a direct result of seeing the injustice of a wrongful lawsuit against my family's business. My passion was always business, but I knew that learning the law was the right thing to do to protect honest, hardworking people. It was the harder path, but it was the right one. This is the same principle I bring to everything I do.</p><br>
+                            <p>Another example, going years back, makes me smile every time I think about it. My friends at school hosted a competition to decide who is my best friend (we were young, doing what young children do haha). Though more than a decade has passed since this competition, the premise still stands: people respect and appreciate who I am and what I do so much that they are proud to be associated with me.</p>
                         </div>
                     </div>
                 </div>
@@ -140,73 +147,41 @@
                         <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
                             <h3 class="text-2xl font-bold text-slate-800">Placeholder</h3>
                             <p class="text-slate-600 mt-4">X</p>
-                            <div class="mt-6 pt-6 border-t border-slate-200">
-                                <h4 class="font-semibold text-slate-500 text-sm uppercase tracking-wider">Supporting Example</h4>
-                                <p class="text-slate-600 mt-2">Placeholder</p>
-                            </div>
                         </div>
                         <!-- Quality Card 2 -->
                         <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
                              <h3 class="text-2xl font-bold text-slate-800">Placeholder</h3>
                             <p class="text-slate-600 mt-4">X</p>
-                            <div class="mt-6 pt-6 border-t border-slate-200">
-                                <h4 class="font-semibold text-slate-500 text-sm uppercase tracking-wider">Supporting Example</h4>
-                                <p class="text-slate-600 mt-2">Placeholder</p>
-                            </div>
                         </div>
                         <!-- Quality Card 3 -->
                         <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
                             <h3 class="text-2xl font-bold text-slate-800">Placeholder</h3>
                             <p class="text-slate-600 mt-4">X</p>
-                            <div class="mt-6 pt-6 border-t border-slate-200">
-                                <h4 class="font-semibold text-slate-500 text-sm uppercase tracking-wider">Supporting Example</h4>
-                                <p class="text-slate-600 mt-2">Placeholder</p>
-                            </div>
                         </div>
                         <!-- Quality Card 4 -->
                         <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
                             <h3 class="text-2xl font-bold text-slate-800">Placeholder</h3>
                             <p class="text-slate-600 mt-4">X</p>
-                            <div class="mt-6 pt-6 border-t border-slate-200">
-                                <h4 class="font-semibold text-slate-500 text-sm uppercase tracking-wider">Supporting Example</h4>
-                                <p class="text-slate-600 mt-2">Placeholder</p>
-                            </div>
                         </div>
                         <!-- Quality Card 5 -->
                         <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
                             <h3 class="text-2xl font-bold text-slate-800">Placeholder</h3>
                             <p class="text-slate-600 mt-4">X</p>
-                            <div class="mt-6 pt-6 border-t border-slate-200">
-                                <h4 class="font-semibold text-slate-500 text-sm uppercase tracking-wider">Supporting Example</h4>
-                                <p class="text-slate-600 mt-2">Placeholder</p>
-                            </div>
                         </div>
                         <!-- Quality Card 6 -->
                         <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
                             <h3 class="text-2xl font-bold text-slate-800">Placeholder</h3>
                             <p class="text-slate-600 mt-4">X</p>
-                            <div class="mt-6 pt-6 border-t border-slate-200">
-                                <h4 class="font-semibold text-slate-500 text-sm uppercase tracking-wider">Supporting Example</h4>
-                                <p class="text-slate-600 mt-2">Placeholder</p>
-                            </div>
                         </div>
                         <!-- Quality Card 7 -->
                         <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
                             <h3 class="text-2xl font-bold text-slate-800">Placeholder</h3>
                             <p class="text-slate-600 mt-4">X</p>
-                            <div class="mt-6 pt-6 border-t border-slate-200">
-                                <h4 class="font-semibold text-slate-500 text-sm uppercase tracking-wider">Supporting Example</h4>
-                                <p class="text-slate-600 mt-2">Placeholder</p>
-                            </div>
                         </div>
                         <!-- Quality Card 8 -->
                         <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
                             <h3 class="text-2xl font-bold text-slate-800">Placeholder</h3>
                             <p class="text-slate-600 mt-4">X</p>
-                            <div class="mt-6 pt-6 border-t border-slate-200">
-                                <h4 class="font-semibold text-slate-500 text-sm uppercase tracking-wider">Supporting Example</h4>
-                                <p class="text-slate-600 mt-2">Placeholder</p>
-                            </div>
                         </div>
                     </div>
                 </div>
