--- a/resume.html
+++ b/resume.html
@@ -118,7 +118,7 @@
 
                     <!-- Intro Note -->
                     <div class="text-center max-w-2xl mx-auto mb-20 bg-slate-50 p-6 rounded-xl border border-slate-200">
-                        <p class="text-slate-600 italic">A quick note: I recognize that this is a different approach to a job application, and going through it is 100% optional. But I figured I'd share this info in case you want to gain a better understanding of who I am. It should only take a couple of minutes to read through.</p>
+                        <p class="text-slate-600 italic">A quick note: I recognize that this is a different approach to a job application, and going through it is 100% optional. But I figured I'd share this info in case you want to gain a better understanding of who I am. I estimate it'll take a couple of minutes to read through.</p>
                     </div>
 
 
