--- a/fit.html
+++ b/fit.html
@@ -145,43 +145,53 @@
                     <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
                         <!-- Quality Card 1 -->
                         <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
-                            <h3 class="text-2xl font-bold text-slate-800">Placeholder</h3>
-                            <p class="text-slate-600 mt-4">X</p>
+                            <h3 class="text-xl font-bold text-slate-800">Ability to Listen</h3>
+                            <p class="text-slate-600 mt-4">I listen to truly understand, not just to respond. This helps me learn quickly, collaborate effectively, and make my colleagues feel heard and valued.</p>
                         </div>
                         <!-- Quality Card 2 -->
                         <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
-                             <h3 class="text-2xl font-bold text-slate-800">Placeholder</h3>
-                            <p class="text-slate-600 mt-4">X</p>
+                             <h3 class="text-xl font-bold text-slate-800">Energy</h3>
+                            <p class="text-slate-600 mt-4">I bring a contagious, positive energy to every room I enter. I'm fun to be around and genuinely enjoy raising the collective morale and ceiling of the group.</p>
                         </div>
                         <!-- Quality Card 3 -->
                         <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
-                            <h3 class="text-2xl font-bold text-slate-800">Placeholder</h3>
-                            <p class="text-slate-600 mt-4">X</p>
+                            <h3 class="text-xl font-bold text-slate-800">Quick & Eager Learner</h3>
+                            <p class="text-slate-600 mt-4">Learning how to learn quickly is one of the highest ROI skills I've developed. Paired with a genuine eagerness, I inhale information, which will help me contribute to the team immediately.</p>
                         </div>
                         <!-- Quality Card 4 -->
                         <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
-                            <h3 class="text-2xl font-bold text-slate-800">Placeholder</h3>
-                            <p class="text-slate-600 mt-4">X</p>
+                            <h3 class="text-xl font-bold text-slate-800">Detail Oriented</h3>
+                            <p class="text-slate-600 mt-4">My experiences in law and computer programming have trained me to be meticulous. I understand that every detail matters, a lesson reinforced by a childhood deal with my mom—$10 for every silly math mistake. I never made one again.</p>
                         </div>
                         <!-- Quality Card 5 -->
                         <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
-                            <h3 class="text-2xl font-bold text-slate-800">Placeholder</h3>
-                            <p class="text-slate-600 mt-4">X</p>
+                            <h3 class="text-xl font-bold text-slate-800">Hard Worker</h3>
+                            <p class="text-slate-600 mt-4">I am one of the hardest workers I know and am eager to do whatever it takes to help the team win, including the "boring work." My commitment is outlined in detail on the Resume page.</p>
                         </div>
                         <!-- Quality Card 6 -->
                         <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
-                            <h3 class="text-2xl font-bold text-slate-800">Placeholder</h3>
-                            <p class="text-slate-600 mt-4">X</p>
+                            <h3 class="text-xl font-bold text-slate-800">Team Player</h3>
+                            <p class="text-slate-600 mt-4">I thrive on working with awesome people and focus on the intangibles that make a team both fun and productive. I work to get buy-in on the mission, facilitate clear communication, and keep morale high.</p>
                         </div>
                         <!-- Quality Card 7 -->
                         <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
-                            <h3 class="text-2xl font-bold text-slate-800">Placeholder</h3>
-                            <p class="text-slate-600 mt-4">X</p>
+                            <h3 class="text-xl font-bold text-slate-800">Professional</h3>
+                            <p class="text-slate-600 mt-4">I've spent thousands of hours interacting with high-profile clients and understand how to conduct myself with a high degree of professionalism, clarity, and precision.</p>
                         </div>
                         <!-- Quality Card 8 -->
                         <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
-                            <h3 class="text-2xl font-bold text-slate-800">Placeholder</h3>
-                            <p class="text-slate-600 mt-4">X</p>
+                            <h3 class="text-xl font-bold text-slate-800">Good Communicator</h3>
+                            <p class="text-slate-600 mt-4">I listen well, do my best to be articulate and easy to understand, and I make no assumptions—I spell things out to make sure everyone is on the same page.</p>
+                        </div>
+                        <!-- Quality Card 9 -->
+                        <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
+                            <h3 class="text-xl font-bold text-slate-800">Take Initiative & Responsibility</h3>
+                            <p class="text-slate-600 mt-4">I take it upon myself to think ahead and act accordingly. I'm generally the first to offer help or execute on a new idea. If things go south, I'll be the first to take responsibility and find solutions.</p>
+                        </div>
+                        <!-- Quality Card 10 -->
+                        <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
+                            <h3 class="text-xl font-bold text-slate-800">Manage Priorities Well</h3>
+                            <p class="text-slate-600 mt-4">Growing up juggling work, competitive sports, and academics taught me how to balance many tasks and work ahead of schedule. In challenging situations, I'm the one who stays calm and de-escalates.</p>
                         </div>
                     </div>
                 </div>
