--- a/fit.html
+++ b/fit.html
@@ -142,7 +142,7 @@
                          <p class="mt-4 max-w-2xl mx-auto text-slate-600">These are the personal attributes I bring to every team and every challenge.</p>
                     </div>
 
-                    <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
+                    <div class="grid md:grid-cols-2 gap-8">
                         <!-- Quality Card 1 -->
                         <div class="bg-slate-50 p-8 rounded-xl border border-slate-200 text-left">
                             <h3 class="text-xl font-bold text-slate-800">Ability to Listen</h3>
